--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/splash.jpg
-   - images/login_image.jpg
    - images/image1.jpg
    - images/image2.jpg
    - images/image3.jpg
    - images/image4.jpg
+   - images/login_page.jpg
+
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -67,8 +68,8 @@ flutter:
   fonts:
     - family: Gotham
       fonts:
-        - asset: fonts/gotham_bold.OTF
         - asset: fonts/gotham_medium.OTF
+        
           
   #  - family: Trajan Pro
   #     fonts:
