ALL MILK - Completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ flutter:
    - images/image3.jpg
    - images/image4.jpg
    - images/login_page.jpg
+   - images/milk1.jpg
+   - images/milk2.jpg
+   - images/milk3.jpg
+   - images/milk4.jpg
 
    
 
