--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,18 @@ flutter:
    - images/milk3.jpg
    - images/milk4.jpg
    - images/subsci.jpg
+   - images/01.jpg
+   - images/02.jpg
+   - images/03.jpg
+   - images/04.jpg
+   - images/05.jpg
+   - images/06.jpg
+   - images/07.jpg
+   - images/08.jpg
+   - images/09.jpg
+   - images/10.jpg
+   - images/11.jpg
+   - images/12.jpg
 
    
 
