--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,12 @@ flutter:
    - images/10.jpg
    - images/11.jpg
    - images/12.jpg
+   - images/dalimb.jpg
+   - images/coconut1.jpg
+   - images/coconut2.jpg
+   - images/banana.jpg
+   - images/apple.jpg
+
 
    
 
