My Wallet & Subscription Completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
    - images/coconut2.jpg
    - images/banana.jpg
    - images/apple.jpg
+   - images/subs_img.jpg
+   - images/reserve.jpg
+   - images/history.jpg
+   - images/bill.jpg
+   - images/balance.jpg
 
 
    
